--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "repository": "",
   "homepage": "https://github.com/rbtkoz/porto",
-
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
@@ -31,6 +30,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "express": "^4.13.3",
     "file-loader": "^0.9.0",
@@ -38,24 +38,22 @@
     "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.13.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.5",
+    "react-messenger-plugin": "^1.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^1.16.1",
     "webpack-validator": "^2.2.8",
-    "classnames": "^2.2.5",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.5",
     "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js",
-    "prod" : "NODE_ENV=production node server.js",
-    "postinstall" : "webpack -p",
+    "prod": "NODE_ENV=production node server.js",
+    "postinstall": "webpack -p",
     "build": "webpack"
   }
 }
-
-
