--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "claudia": "^2.1.5",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "eslint-plugin-react": "^6.4.1",
@@ -30,9 +31,11 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "express": "^4.13.3",
+    "facebook-messenger-bot": "0.1.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "postcss-cssnext": "^2.8.0",
@@ -54,6 +57,7 @@
     "start": "webpack-dev-server --config ./webpack.config.js",
     "prod": "NODE_ENV=production node server.js",
     "postinstall": "webpack -p",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "claudia create --version dev --region us-east-1 --api-module api"
   }
 }
